fix: fixes missing padding for viewports on CardGrid component, normalizes spacing in directors section on About page

--- a/src/components/CardGrid.module.css
+++ b/src/components/CardGrid.module.css
@@ -5,8 +5,14 @@
 }
 @media screen and (min-width: 768px) {
   .card__grid {
+    padding: 0 70px;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 15px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .card__grid {
+    padding: 0 180px;
   }
 }
 @media screen and (min-width: 1280px) {
